--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="ar" dir="rtl">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content">
-    <title>إمبراطورية علوش V93 👑</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>إمبراطورية علوش V94 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
@@ -12,63 +12,46 @@
         * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; outline: none; }
         body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
 
-        /* تأثير اسم المالك (علوش) */
-        .owner-style { 
-            font-size: 22px !important; 
-            text-shadow: 0 0 10px gold, 0 0 20px orange; 
-            animation: owner-glow 1.5s infinite alternate;
-            display: inline-block;
-        }
-        @keyframes owner-glow { 
-            from { transform: scale(1); filter: drop-shadow(0 0 5px gold); } 
-            to { transform: scale(1.05); filter: drop-shadow(0 0 15px yellow); } 
-        }
+        /* فخامة اسم المالك */
+        .owner-style { font-size: 20px !important; color: gold; text-shadow: 0 0 10px gold; animation: blink 1.5s infinite; }
+        @keyframes blink { 0% { opacity: 1; } 50% { opacity: 0.7; } 100% { opacity: 1; } }
 
-        /* شاشة تسجيل الدخول */
-        #login-screen { position: fixed; inset: 0; background: #000; z-index: 99999; display: flex; align-items: center; justify-content: center; }
-        .login-card { background: #111; padding: 30px; border-radius: 20px; border: 2px solid var(--gold); text-align: center; width: 90%; max-width: 400px; }
-
-        /* القوائم */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; position: relative; z-index: 1001; }
-        .side { position: fixed; top: 0; bottom: 0; width: 285px; background: #0e0e0e; z-index: 10000; transition: 0.4s cubic-bezier(0.4, 0, 0.2, 1); visibility: hidden; overflow-y: auto; }
+        /* الهيدر والقوائم */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; z-index: 1000; }
+        .side { position: fixed; top: 0; bottom: 0; width: 285px; background: #0e0e0e; z-index: 10000; transition: 0.4s; visibility: hidden; overflow-y: auto; }
         #side-r { right: -290px; border-left: 2px solid var(--gold); }
         #side-l { left: -290px; border-right: 2px solid var(--gold); }
-        .side.active { visibility: visible; }
+        .side.active { visibility: visible; transform: translateX(0); }
         #side-r.active { transform: translateX(-285px); }
         #side-l.active { transform: translateX(285px); }
         #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.8); z-index: 9000; display: none; }
 
-        /* الشات والفوتر المحسن للموبايل */
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 110px; }
-        .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; position: relative; }
-        
-        .footer { 
-            position: fixed; bottom: 0; left: 0; width: 100%; height: 90px; 
-            background: #000; border-top: 2px solid #222; 
-            display: flex; align-items: center; padding: 0 10px 15px 10px; z-index: 2000;
-        }
-        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #444; border-radius: 25px; color: #fff; padding: 0 20px; font-size: 16px; }
-        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; margin-right: 8px; cursor: pointer; min-width: 80px; }
+        /* الشات */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; }
+        .bubble { background: #161616; padding: 12px; border-radius: 15px; border: 1px solid #222; max-width: 85%; }
+        .yt-player { width: 100%; height: 180px; border-radius: 10px; margin-top: 10px; border: 1px solid gold; }
 
-        /* البحث الجانبي (يوتيوب) */
-        .yt-box { padding: 10px; border-bottom: 1px solid #333; }
-        iframe { width: 100%; border-radius: 10px; margin-top: 10px; border: 1px solid gold; }
+        /* البحث الجانبي */
+        .search-results { padding: 10px; background: #111; margin-top: 10px; border-radius: 5px; max-height: 200px; overflow-y: auto; }
+        .video-item { padding: 8px; border-bottom: 1px solid #222; cursor: pointer; font-size: 13px; color: #ccc; }
+        .video-item:hover { color: gold; background: #222; }
 
-        /* الألوان والزخرفة */
-        .name-glow { font-weight: 900; background-size: 200% auto; -webkit-background-clip: text; -webkit-text-fill-color: transparent; animation: shine 2s linear infinite; }
-        @keyframes shine { to { background-position: 200% center; } }
-        .theme-gold { background-image: linear-gradient(to right, #ffd700, #fff, #ffd700); }
-        .theme-fire { background-image: linear-gradient(to right, #ff416c, #ff4b2b, #ff416c); }
-        .theme-ocean { background-image: linear-gradient(to right, #00d2ff, #3a7bd5, #00d2ff); }
+        /* الفوتر المحسن للموبايل */
+        .footer { height: 100px; background: #000; border-top: 1px solid #222; display: flex; align-items: center; padding: 10px 15px 30px 15px; z-index: 2000; }
+        #msg-in { flex: 1; height: 50px; background: #111; border: 1px solid #444; border-radius: 25px; color: #fff; padding: 0 20px; }
+        .send-btn { background: var(--gold); color: black; border: none; height: 50px; padding: 0 20px; border-radius: 25px; font-weight: 900; margin-right: 10px; cursor: pointer; }
+
+        #login-screen { position: fixed; inset: 0; background: #000; z-index: 99999; display: flex; align-items: center; justify-content: center; }
+        .login-card { background: #111; padding: 30px; border-radius: 20px; border: 2px solid var(--gold); text-align: center; width: 90%; }
     </style>
 </head>
 <body>
 
 <div id="login-screen">
     <div class="login-card">
-        <h1 class="name-glow theme-gold" style="font-size: 26px;">دخول الإمبراطورية</h1>
+        <h1 style="color:gold;">إمبراطورية علوش</h1>
         <input type="text" id="user-name-in" style="width:100%; padding:15px; margin:20px 0; background:#000; color:white; border:1px solid gold; border-radius:10px; text-align:center;" placeholder="اكتب اسمك الملكي...">
-        <button class="send-btn" style="width:100%; margin:0;" onclick="handleLogin()">دخول الآن</button>
+        <button class="send-btn" style="width:100%; margin:0;" onclick="handleLogin()">دخول</button>
     </div>
 </div>
 
@@ -76,39 +59,26 @@
 
 <div class="header">
     <button onclick="openSide('side-l')" style="background:none; border:none; font-size:24px;">⚙️</button>
-    <div class="name-glow theme-gold">إمبراطورية علوش</div>
+    <div style="color:gold; font-weight:900;">إمبراطورية علوش</div>
     <button onclick="openSide('side-r')" style="background:none; border:none; font-size:24px;">👥</button>
 </div>
 
 <div id="side-r" class="side">
-    <h3 style="padding:20px; text-align:center; color:gold; border-bottom:1px solid #222;">🛡️ المتصلون</h3>
+    <h3 style="padding:20px; text-align:center; color:gold;">🛡️ المتصلون</h3>
     <div id="on-list" style="padding:10px;">
-        <div style="padding:12px; border-bottom:1px solid #222; color:#00ffcc;">🤖 بوت الإمبراطورية (نشط)</div>
+        <div style="color:#00ffcc; padding:10px;">🤖 بوت الحماية</div>
     </div>
 </div>
 
 <div id="side-l" class="side">
     <div style="padding:20px; text-align:center;">
-        <img id="my-av" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png" style="width:80px; height:80px; border-radius:50%; border:2px solid gold; cursor:pointer;" onclick="document.getElementById('file-in').click()">
-        <input type="file" id="file-in" hidden onchange="changeAv(this)">
-        <h2 id="display-name" class="name-glow theme-gold">الاسم</h2>
-    </div>
-
-    <div class="yt-box">
-        <p style="font-size:12px; color:gold; margin-bottom:5px;">🎬 بحث المقاطع (YouTube):</p>
-        <div style="display:flex; gap:5px;">
-            <input type="text" id="yt-query" style="flex:1; padding:8px; background:#000; color:white; border:1px solid #444; border-radius:5px;" placeholder="اكتب اسم المقطع...">
-            <button onclick="searchYT()" style="background:gold; border:none; border-radius:5px; padding:0 10px; cursor:pointer;">🔍</button>
+        <h2 id="display-name">الاسم</h2>
+        <p style="font-size:12px; color:gold; margin-top:15px;">🔍 ابحث وشغل في الشات:</p>
+        <div style="display:flex; gap:5px; margin-top:5px;">
+            <input type="text" id="yt-query" style="flex:1; padding:8px; background:#000; border:1px solid #444; color:white; border-radius:5px;" placeholder="اسم المقطع...">
+            <button onclick="searchYT()" style="background:gold; border:none; border-radius:5px; padding:0 10px;">🔍</button>
         </div>
-        <div id="yt-result"></div>
-    </div>
-
-    <div style="padding:15px;">
-        <p style="font-size:12px; color:gold;">✍️ زخرفة الاسم:</p>
-        <input type="text" id="custom-decor" style="width:100%; padding:10px; background:#000; color:white; border:1px solid #444; border-radius:5px; margin:5px 0;" placeholder="مثال: 👑" oninput="updateProfile()">
-        <p style="font-size:12px; color:gold; margin-top:10px;">🎨 الثيمات:</p>
-        <button onclick="setTheme('theme-gold')" style="width:100%; padding:8px; margin-top:5px; background:gold; color:black; font-weight:bold; border:none; border-radius:5px;">ذهبي</button>
-        <button onclick="setTheme('theme-fire')" style="width:100%; padding:8px; margin-top:5px; background:red; color:white; font-weight:bold; border:none; border-radius:5px;">ناري</button>
+        <div id="yt-result" class="search-results"></div>
     </div>
 </div>
 
@@ -116,7 +86,7 @@
 
 <div class="footer">
     <input type="text" id="msg-in" placeholder="اكتب رسالتك..." onkeypress="if(event.key==='Enter') sendMsg()">
-    <button class="send-btn" id="send-trigger" onclick="sendMsg()">إرسال</button>
+    <button class="send-btn" onclick="sendMsg()">إرسال</button>
 </div>
 
 <script>
@@ -124,93 +94,71 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let me = { name: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", theme: "theme-gold", decor: "" };
-
-    window.onload = () => {
-        let saved = localStorage.getItem('allosh_user_v93');
-        if(saved) { me = JSON.parse(saved); startApp(); }
-    };
+    let me = { name: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png", theme: "theme-gold", decor: "👑" };
 
     function handleLogin() {
         let n = document.getElementById('user-name-in').value.trim();
         if(n.length < 2) return alert("الاسم قصير!");
         me.name = n;
-        localStorage.setItem('allosh_user_v93', JSON.stringify(me));
-        startApp();
-    }
-
-    function startApp() {
         document.getElementById('login-screen').style.display = 'none';
-        let dName = document.getElementById('display-name');
-        dName.innerText = me.name;
-        dName.className = (me.name === "علوش") ? "owner-style theme-gold" : `name-glow ${me.theme}`;
-        if(me.name === "علوش") dName.innerHTML = `👑 مالك الشات: علوش 👑`;
-
-        const ref = db.ref('online_v93/' + me.name);
-        ref.set(me);
-        ref.onDisconnect().remove();
+        document.getElementById('display-name').innerText = n;
+        const ref = db.ref('online_v94/' + me.name);
+        ref.set(true); ref.onDisconnect().remove();
     }
 
+    // إصلاح البحث: الآن نرسل الرابط مباشرة للشات
     function searchYT() {
         let q = document.getElementById('yt-query').value;
         if(!q) return;
-        document.getElementById('yt-result').innerHTML = `<iframe height="150" src="https://www.youtube.com/embed?listType=search&list=${q}" frameborder="0" allowfullscreen></iframe>`;
+        // نضع رابط مباشر يفتح يوتيوب للبحث لضمان عدم الحظر
+        let searchLink = `https://www.youtube.com/results?search_query=${encodeURIComponent(q)}`;
+        document.getElementById('yt-result').innerHTML = `
+            <div class="video-item" onclick="sendYTLink('${q}')">
+                إرسال رابط البحث عن "${q}" للشات 🚀
+            </div>
+            <p style="font-size:10px; color:gray; margin-top:5px;">اضغط أعلاه لمشاركة المقطع</p>
+        `;
     }
 
-    function updateProfile() {
-        me.decor = document.getElementById('custom-decor').value;
-        startApp();
-        db.ref('online_v93/' + me.name).update(me);
-    }
-
-    function setTheme(t) {
-        me.theme = t;
-        startApp();
-        db.ref('online_v93/' + me.name).update(me);
-    }
-
-    function changeAv(i) {
-        if(i.files && i.files[0]) {
-            let r = new FileReader();
-            r.onload = (e) => { 
-                me.img = e.target.result; 
-                document.getElementById('my-av').src = me.img;
-                db.ref('online_v93/' + me.name).update(me);
-            };
-            r.readAsDataURL(i.files[0]);
-        }
+    function sendYTLink(q) {
+        let msg = `يا شباب شوفوا هذا المقطع: https://www.youtube.com/results?search_query=${encodeURIComponent(q)}`;
+        db.ref('chat_v94').push({ u: me.name, t: msg });
+        closeSides();
     }
 
     function sendMsg() {
-        let i = document.getElementById('msg-in'); if(!i.value || !me.name) return;
-        db.ref('chat_v93').push({ u: me.name, t: i.value, a: me.img, theme: me.theme, decor: me.decor });
+        let i = document.getElementById('msg-in'); if(!i.value) return;
+        db.ref('chat_v94').push({ u: me.name, t: i.value });
         i.value = "";
     }
 
-    db.ref('chat_v93').limitToLast(30).on('child_added', s => {
+    // دالة لاستخراج معرف الفيديو من الرابط
+    function getVId(t) {
+        let m = t.match(/(?:youtube\.com\/(?:[^\/]+\/.+\/|(?:v|e(?:mbed)?)\/|.*[?&]v=)|youtu\.be\/)([^"&?\/\s]{11})/);
+        return m ? m[1] : null;
+    }
+
+    db.ref('chat_v94').limitToLast(20).on('child_added', s => {
         let d = s.val();
+        let vid = getVId(d.t);
         let div = document.createElement('div');
-        div.style.display="flex"; div.style.gap="10px"; div.style.marginBottom="15px";
-        let isOwner = d.u === "علوش" ? "owner-style" : `name-glow ${d.theme}`;
-        let badge = d.u === "علوش" ? "👑 المالك" : "";
-        div.innerHTML = `<img src="${d.a}" style="width:40px; height:40px; border-radius:50%; border:1px solid gold;">
+        div.style.marginBottom = "15px";
+        let isOwner = d.u === "علوش" ? "owner-style" : "";
+        div.innerHTML = `
             <div class="bubble">
-                <span class="${isOwner}">${badge} ${d.decor} ${d.u} ${d.decor}</span>
+                <b class="${isOwner}">${d.u === "علوش" ? '👑 المالك علوش' : d.u}</b>
                 <div style="margin-top:5px;">${d.t}</div>
+                ${vid ? `<iframe class="yt-player" src="https://www.youtube.com/embed/${vid}" frameborder="0" allowfullscreen></iframe>` : ''}
             </div>`;
         document.getElementById('chat-flow').appendChild(div);
         document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
     });
 
-    db.ref('online_v93').on('value', s => {
-        let l = document.getElementById('on-list'); 
-        l.innerHTML = `<div style="padding:12px; border-bottom:1px solid #222; color:#00ffcc;">🤖 بوت الإمبراطورية (نشط)</div>`;
+    db.ref('online_v94').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = `<div style="color:#00ffcc; padding:10px;">🤖 بوت الحماية</div>`;
         s.forEach(u => {
-            let d = u.val();
-            let isOwner = u.key === "علوش" ? "owner-style" : `name-glow ${d.theme}`;
-            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #222;">
-                <span class="${isOwner}">${d.decor} ${u.key} ${d.decor}</span>
-            </div>`;
+            let isK = u.key === "علوش";
+            l.innerHTML += `<div style="padding:10px; color:${isK?'gold':'white'}">${isK?'👑 ':''}${u.key}</div>`;
         });
     });
 
