--- a/index.html
+++ b/index.html
@@ -3,46 +3,47 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>إمبراطورية علوش | V105 👑</title>
+    <title>إمبراطورية علوش | V107 👑</title>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@700;900&display=swap');
         :root { --gold: #ffd700; --bg: #0b0b0b; }
-        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; }
-        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; }
+        * { box-sizing: border-box; font-family: 'Cairo', sans-serif; margin: 0; padding: 0; touch-action: manipulation; }
+        body { background: var(--bg); color: white; height: 100vh; display: flex; flex-direction: column; overflow: hidden; position: relative; }
 
         /* ستايل المالك */
         .owner-glow { font-weight: 900; text-shadow: 0 0 10px #ff00ea, 0 0 20px #00e1ff; animation: glow 2s infinite alternate; }
-        @keyframes glow { from { filter: hue-rotate(0deg); } to { filter: hue-rotate(360deg); } }
 
-        /* الهيدر */
-        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; position: relative; z-index: 1000; }
-        .h-btn { background: none; border: none; font-size: 26px; color: white; cursor: pointer; padding: 5px; z-index: 1100; pointer-events: auto; }
+        /* الهيدر - جعلته في المقدمة */
+        .header { height: 60px; background: #000; border-bottom: 2px solid var(--gold); display: flex; align-items: center; justify-content: space-between; padding: 0 15px; position: relative; z-index: 99999; }
+        .h-btn { background: none; border: none; font-size: 28px; color: white; cursor: pointer; padding: 5px; }
 
         /* القوائم الجانبية */
-        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 10000; transition: 0.3s; visibility: hidden; overflow-y: auto; border: 1px solid var(--gold); }
+        .side { position: fixed; top: 0; bottom: 0; width: 280px; background: #0e0e0e; z-index: 100000; transition: 0.3s; visibility: hidden; overflow-y: auto; border: 2px solid var(--gold); box-shadow: 0 0 20px rgba(0,0,0,0.5); }
         #side-r { right: -285px; } #side-l { left: -285px; }
         .side.active { visibility: visible; transform: translateX(0); }
         #side-r.active { transform: translateX(-280px); } #side-l.active { transform: translateX(280px); }
         
-        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 9000; display: none; }
+        /* غطاء شفاف عند فتح القوائم فقط */
+        #overlay { position: fixed; inset: 0; background: rgba(0,0,0,0.7); z-index: 99998; display: none; }
+
+        /* الشات */
+        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 120px; z-index: 1; -webkit-overflow-scrolling: touch; }
+        .bubble { background: #1a1a1a; padding: 12px; border-radius: 12px; border-right: 4px solid var(--gold); max-width: 85%; word-break: break-all; }
+        .bot-bubble { border-right-color: #00ffcc !important; background: rgba(0,255,204,0.1) !important; }
+
+        /* الفوتر - منطقة الكتابة */
+        .footer { position: fixed; bottom: 0; left: 0; right: 0; height: 100px; background: #000; border-top: 2px solid var(--gold); display: flex; align-items: center; padding: 0 15px 35px 15px; z-index: 99999; }
+        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #444; border-radius: 20px; color: #fff; padding: 0 15px; font-size: 16px; outline: none; }
+        #msg-in:focus { border-color: var(--gold); }
+        .send-btn { background: var(--gold); color: #000; border: none; height: 45px; padding: 0 20px; border-radius: 20px; font-weight: 900; margin-right: 10px; cursor: pointer; }
 
         /* الملف الشخصي */
         .profile-area { text-align: center; padding: 20px; border-bottom: 1px solid #333; }
-        .av-circle { width: 90px; height: 90px; margin: 0 auto; border-radius: 50%; padding: 3px; background: linear-gradient(45deg, #ff00ea, var(--gold)); cursor: pointer; }
+        .av-circle { width: 90px; height: 90px; margin: 0 auto; border-radius: 50%; padding: 3px; background: linear-gradient(45deg, #ff00ea, var(--gold)); cursor: pointer; overflow: hidden; }
         .av-circle img { width: 100%; height: 100%; border-radius: 50%; object-fit: cover; }
-        .decor-box { width: 100%; padding: 10px; margin-top: 15px; background: #000; border: 1px solid var(--gold); color: var(--gold); border-radius: 8px; text-align: center; font-weight: bold; }
-
-        /* الشات والفيديو */
-        #chat-flow { flex: 1; overflow-y: auto; padding: 15px; display: flex; flex-direction: column; gap: 12px; padding-bottom: 120px; }
-        .bubble { background: #1a1a1a; padding: 12px; border-radius: 12px; border-right: 4px solid var(--gold); max-width: 85%; }
-        .yt-sq { width: 150px; height: 150px; border-radius: 10px; border: 1px solid var(--gold); margin-top: 8px; display: block; }
-
-        /* الفوتر */
-        .footer { position: fixed; bottom: 0; left: 0; right: 0; height: 100px; background: #000; border-top: 1px solid var(--gold); display: flex; align-items: center; padding: 0 15px 35px 15px; z-index: 8000; }
-        #msg-in { flex: 1; height: 45px; background: #111; border: 1px solid #444; border-radius: 20px; color: #fff; padding: 0 15px; }
-        .send-btn { background: var(--gold); color: #000; border: none; height: 45px; padding: 0 20px; border-radius: 20px; font-weight: bold; margin-right: 8px; cursor: pointer; }
+        .decor-box { width: 100%; padding: 10px; margin-top: 15px; background: #000; border: 1px solid var(--gold); color: var(--gold); border-radius: 8px; text-align: center; }
     </style>
 </head>
 <body>
@@ -51,8 +52,13 @@
 
 <div class="header">
     <button class="h-btn" onclick="openSide('side-l')">⚙️</button>
-    <div style="color:var(--gold); font-weight:900; font-size: 18px;">إمبراطورية علوش</div>
+    <div style="color:var(--gold); font-weight:900; font-size:18px;">إمبراطورية علوش</div>
     <button class="h-btn" onclick="openSide('side-r')">👥</button>
+</div>
+
+<div id="side-r" class="side">
+    <h3 style="text-align:center; padding:20px; color:var(--gold); border-bottom:1px solid #222;">👥 المتواجدون</h3>
+    <div id="on-list"></div>
 </div>
 
 <div id="side-l" class="side">
@@ -61,20 +67,15 @@
             <img id="p-img" src="https://cdn-icons-png.flaticon.com/512/3135/3135715.png">
         </div>
         <input type="file" id="f-up" hidden onchange="upImg(this)">
-        <h3 id="p-name" style="margin-top:10px;">الاسم</h3>
-        <input type="text" id="p-decor" class="decor-box" placeholder="اكتب زخرفتك هنا.." oninput="updateData()">
+        <h3 id="p-name" style="margin-top:10px;">علوش</h3>
+        <input type="text" id="p-decor" class="decor-box" placeholder="زخرف اسمك هنا.." oninput="updateData()">
     </div>
     <div style="padding:15px;">
-        <button onclick="botQ()" style="width:100%; padding:10px; background:var(--gold); border:none; border-radius:5px; font-weight:bold; cursor:pointer;">🏆 مسابقة سريعة</button>
-        <div id="adm-box" style="display:none; margin-top:10px;">
-            <button onclick="clearCh()" style="width:100%; padding:10px; background:red; color:white; border:none; border-radius:5px; cursor:pointer;">🧹 تنظيف الشات</button>
+        <button onclick="triggerBot()" style="width:100%; padding:12px; background:var(--gold); border:none; border-radius:8px; font-weight:bold; cursor:pointer;">🏆 طرح مسابقة</button>
+        <div id="adm-box" style="display:none; margin-top:15px;">
+            <button onclick="clearCh()" style="width:100%; padding:12px; background:red; color:white; border:none; border-radius:8px; cursor:pointer;">🧹 تنظيف الشات</button>
         </div>
     </div>
-</div>
-
-<div id="side-r" class="side">
-    <h3 style="text-align:center; padding:15px; color:var(--gold);">👤 المتواجدون</h3>
-    <div id="on-list"></div>
 </div>
 
 <div id="chat-flow"></div>
@@ -89,51 +90,64 @@
     firebase.initializeApp(config);
     const db = firebase.database();
 
-    let uName = localStorage.getItem('chat_name') || prompt("أدخل اسمك الملكي:") || "زائر";
+    let uName = localStorage.getItem('chat_name') || prompt("أدخل اسمك:") || "زائر";
     localStorage.setItem('chat_name', uName);
-    
     let me = { name: uName, decor: "", img: "https://cdn-icons-png.flaticon.com/512/3135/3135715.png" };
 
     function init() {
         document.getElementById('p-name').innerText = uName;
-        if(uName === "علوش") {
-            document.getElementById('adm-box').style.display = 'block';
-            document.getElementById('p-name').className = "owner-glow";
-        }
-        db.ref('v105_online/' + uName).set(me);
-        db.ref('v105_online/' + uName).onDisconnect().remove();
+        if(uName === "علوش") { document.getElementById('adm-box').style.display = 'block'; document.getElementById('p-name').className = "owner-glow"; }
+        db.ref('v107_on/' + uName).set(me);
+        db.ref('v107_on/' + uName).onDisconnect().remove();
     }
     init();
 
-    function updateData() {
-        me.decor = document.getElementById('p-decor').value;
-        db.ref('v105_online/' + uName).update(me);
-    }
-
-    function upImg(input) {
-        if (input.files && input.files[0]) {
-            let r = new FileReader();
-            r.onload = e => { me.img = e.target.result; document.getElementById('p-img').src = me.img; db.ref('v105_online/' + uName).update(me); };
-            r.readAsDataURL(input.files[0]);
-        }
-    }
+    function updateData() { me.decor = document.getElementById('p-decor').value; db.ref('v107_on/' + uName).update(me); }
+    function upImg(input) { if (input.files && input.files[0]) { let r = new FileReader(); r.onload = e => { me.img = e.target.result; document.getElementById('p-img').src = me.img; db.ref('v107_on/' + uName).update(me); }; r.readAsDataURL(input.files[0]); } }
 
     function sendM() {
-        let i = document.getElementById('msg-in'); if(!i.value) return;
-        let v = i.value.match(/^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=)([^#\&\?]*).*/);
-        let vid = (v && v[2].length == 11) ? v[2] : null;
-        db.ref('v105_chat').push({ u: uName, t: i.value, d: me.decor, a: me.img, v: vid });
+        let i = document.getElementById('msg-in'); 
+        if(!i.value.trim()) return;
+        let txt = i.value.trim();
+        db.ref('v107_chat').push({ u: uName, t: txt, d: me.decor, a: me.img });
+        if(txt === "مسابقات" || txt === "اوك") setTimeout(triggerBot, 800);
         i.value = "";
     }
 
-    function botQ() { db.ref('v105_chat').push({ u: "👑 البوت", t: "🏆 سؤال: ما هو عاصمة العراق؟", d: "🤖", a: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png" }); }
-    function clearCh() { if(confirm("مسح الكل؟")) db.ref('v105_chat').remove(); }
+    function triggerBot() {
+        const qs = ["عاصمة العراق؟", "أسرع حيوان؟", "أطول نهر؟", "10+10؟"];
+        let q = qs[Math.floor(Math.random()*qs.length)];
+        db.ref('v107_chat').push({ u: "🤖 بوت المسابقات", t: "🎯 سؤال: " + q, d: "【برق】", a: "https://cdn-icons-png.flaticon.com/512/4712/4712035.png", isBot: true });
+    }
 
-    db.ref('v105_chat').on('child_added', s => {
+    function clearCh() { if(confirm("هل تريد مسح الرسائل؟")) db.ref('v107_chat').remove(); }
+
+    db.ref('v107_chat').on('child_added', s => {
         let d = s.val(); let isO = d.u === "علوش";
         let div = document.createElement('div');
-        div.style.display="flex"; div.style.gap="8px"; div.style.marginBottom="10px";
-        div.innerHTML = `
-            <img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
-            <div class="bubble">
-                <b class="${isO?'owner-glow':''}" style="color:${isO?'':'gold'}">${isO?'👑 علوش':(d.d+' '+d.u+' '+d.
+        div.style.display="flex"; div.style.gap="8px"; div.style.marginBottom="12px";
+        div.innerHTML = `<img src="${d.a}" style="width:35px; height:35px; border-radius:50%; border:1px solid gold;">
+            <div class="bubble ${d.isBot?'bot-bubble':''}">
+                <b class="${isO?'owner-glow':''}" style="color:${d.isBot?'#00ffcc':(isO?'':'gold')}">${isO?'👑 علوش':(d.d+' '+d.u+' '+d.d)}</b>
+                <p style="margin-top:4px;">${d.t}</p>
+            </div>`;
+        document.getElementById('chat-flow').appendChild(div);
+        document.getElementById('chat-flow').scrollTop = document.getElementById('chat-flow').scrollHeight;
+    });
+
+    db.ref('v107_chat').on('child_removed', () => document.getElementById('chat-flow').innerHTML = "");
+
+    db.ref('v107_on').on('value', s => {
+        let l = document.getElementById('on-list'); l.innerHTML = "";
+        l.innerHTML += `<div style="padding:12px; color:#00ffcc;">🤖 بوت الإمبراطورية</div>`;
+        s.forEach(u => {
+            let usr = u.val(); let isO = u.key === "علوش";
+            l.innerHTML += `<div style="padding:12px; border-bottom:1px solid #111;" class="${isO?'owner-glow':''}">● ${isO?'👑 علوش':(usr.decor+' '+u.key+' '+usr.decor)}</div>`;
+        });
+    });
+
+    function openSide(id) { document.getElementById(id).classList.add('active'); document.getElementById('overlay').style.display = 'block'; }
+    function closeSides() { document.querySelectorAll('.side').forEach(s => s.classList.remove('active')); document.getElementById('overlay').style.display = 'none'; }
+</script>
+</body>
+</html>
